--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     height: 30%;
     display: inline-block;
     margin: 15px 0;
-    padding: 20px;
+    padding: 20%;
     text-align: left;
     font-size: 20px;
 }
